--- a/Login/appsettings.json
+++ b/Login/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "JWT": {
+    "Key": "",
+    "Issuer": "JWTAuthenticationServer",
+    "Audience": "JWTServicePostmanClient",
+    "Subject": "JWTServiceAccessToken",
+    "ExpirationHour": 12
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
