--- a/Login/appsettings.json
+++ b/Login/appsettings.json
@@ -1,6 +1,6 @@
 {
   "JWT": {
-    "Key": "",
+    "Key": "this is my custom Secret key for authentication",
     "Issuer": "JWTAuthenticationServer",
     "Audience": "JWTServicePostmanClient",
     "Subject": "JWTServiceAccessToken",
