--- a/Login/Login.csproj
+++ b/Login/Login.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Apis.Drive.v3" Version="1.63.0.3155" />
+      <PackageReference Include="Google.Apis.Sheets.v4" Version="1.63.0.3148" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.13" />
